# gmock-exempel

./: CMakeLists.txt  README.md
builds/: CMakeCache.txt  IBicycle_App  Makefile  cmake_install.cmake  duplicatFile_App  sample
gmock/: IBicycleTest.cpp
samples/: IBicycle.h  main.cpp
